--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -1,4 +1,10 @@
-.products-container {
+.container {
 	max-width: 1140px;
 	margin: 0 auto;
+}
+.products-container {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 40px;
+	margin: 50px 0;
 }
