--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -1,5 +1,5 @@
 .product {
-	border: 1px solid gray;
+	border: 1px solid rgb(216, 212, 212);
 	padding: 10px;
 	position: relative;
 	border-radius: 8px;
